Fixed Markers and added disable horizontal scroll meta tag

--- a/Menu.css
+++ b/Menu.css
@@ -1,12 +1,12 @@
 body, html{
-    height:100%;
+    height:100vh;
 }
 body{
     padding:0;
     margin:0;
     background: black;
     font-family: 'Titillium Web', 'Helvetica Neue', 'Helvetica', sans-serif;
-    max-height: 100%;
+    max-height: 100vh;
     overflow-y: hidden;
 }
 h1, p, li{
@@ -49,20 +49,25 @@ section{
 
 }
 nav{
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0px;
     width: 400px;
-    height: 100%;
+    height: calc(100% - 30px); /*100% - footer*/
     margin: 0 0 0 -400px;
-    -moz-transition: all 200ms ease-in;
-    -webkit-transition: all 200ms ease-in;
-    -o-transition: all 200ms ease-in;
-    transition: all 200ms ease-in;
+
+    -moz-transition: all 400ms ease-in;
+    -webkit-transition: all 400ms ease-in;
+    -o-transition: all 400ms ease-in;
+    transition: all 400ms ease-in;
     overflow: auto;
+
+    z-index:500;
+
+
 }
 nav ul{
-    width:auto;/*Control Side Nav Content Width*/
+    width:auto;
     height:100%;
     padding:0;
     margin:0;
@@ -72,6 +77,7 @@ nav ul{
     direction:rtl;
     text-align: left;
 }
+
 nav li{
     margin:0;
     z-index: 500;
@@ -112,10 +118,10 @@ label{
     position:absolute;
     top:10px;
     left:0px;
-    -moz-transition:all 200ms ease-in;
-    -webkit-transition:all 200ms ease-in;
-    -o-transition:all 200ms ease-in;
-    transition:all 200ms ease-in;
+    -moz-transition:all 400ms ease-in;
+    -webkit-transition:all 400ms ease-in;
+    -o-transition:all 400ms ease-in;
+    transition:all 400ms ease-in;
     z-index:500;
     padding-left: 1%;
 }
@@ -561,9 +567,15 @@ span.cesium-credit-textContainer{
   display: none;
 }
 
-.moveEarth {
-
+.earthContainer{
+  position: relative;
   width: 100%;
 }
+
+.moveEarth {
+  width: 100%;
+}
+
+
 
 /*test out vw and vh values*/
